--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         // 如果时间已过
         if (diff <= 0) {
           document.getElementById('time').innerHTML =
-            '哇，现在就是元旦节了<br>祝你元旦节快乐！🎄🎁'
+            '哇，现在就是元旦节了<br>祝你元旦节快乐！🎁🎁'
           return
         }
 
